1. Added MeasurementUnit-s to the enum; 2. Moved all hardcoded strings to .properties files; 3. Fixed packages structure; 4. Fixed ResponseStatus-es in AuthenticationController, DefaultExceptionHandler; 5. Minor fixes.